# blink-lightning-gateway

./: .env.example  .envrc  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  Tiltfile  build.rs  flake.nix  ln-gateway.yml  rust-toolchain.toml  typos.toml  vendir.lock.yml  vendir.yml
.beads/: .gitignore  metadata.json
.cargo/: audit.toml
.sqlx/: query-00cef4ea73fc43183aa6ab4cd1ea211b7e7ac6061fffaac8705160370b4a68eb.json  query-0865fc74dd0b25e3ccaa986dc6ca4c0245826a6dd3d29f9127d67cee2cf4822c.json  query-08f137104d5834de3d82c021123778e19bb2e9e06694ee22d7a4cefbfdc972a4.json  query-0a5d06bda7c2daa11d1c9e6911733f74b1a37dc8425a14ad39031fffa633e847.json  query-1262f857dd37f2b65d60236bd53d908e10cae2c865ec6b8215a0147b1e78ddea.json  query-1282d0e61b75061279fadd44136dcfbbd8d8fef0013e745c52ec106f056a06b6.json  query-165cf8bf59061b4792e3ec516cd56d97c6604aefe351fa1ae1c66f5de2b2391b.json  query-1779fbb2181f722deb0984a0b3c28b166aae922f5afc7de309e4633fcd1841d4.json  query-1858da44cdb551d171c420a4f8adad81d3d5a327b9fe0b08fb2d3946643ebe66.json  query-2592a6ac6ebc79d42e3788b4f2a3455ef7e37379d032d7fb6eaea170c1b29f61.json  query-339af764ce7cc4ef4d65c15558d4e79cc31491739113d5abcab6d2990eb77dec.json  query-45381377f668040332788c28260b04e4279794674cd2bfc5903037301a089b3c.json  query-53da5aa162f0f913f396f65372aea6e932a963593d897f7f74a64845e8f91ffc.json  query-56dc9d1e3214a0a548e3d21fed920b34b4539bfcacabc8b5ba1960642bd0b5f1.json  query-5a777c2cdeb4f2d3feb4e638caa66b59d132c2d1b3de8513cd1be5a5667e27e7.json  query-5fd2941fe5cf0d522f0f5f0bf1d411483e4c9464195faebce872f0d3d74bba55.json  query-62ded9b3f44f4d61368af595b9e2f0d2d5a74536a6ad035cb568fd5c546cd0ea.json  query-678b12c3902afafc6f207f3e283788c6041ffe7566b3f137ea11285cf5976127.json  query-6a1e2b31ef1f0bc8b0d3f6d4af6a38b98b37777f5ee3193e71be884f1d17b5b3.json  query-6c6b13b74b4e6d19b850518da79e3ddea6a897ec6e885aee7fd45cf3d1d3be16.json  query-799fdee755d9068dbe60779962568a35c208783a327b7123d3548f32ae8b0591.json  query-7ba9386c32210365304c158642db045b602ac94d16bcd2799a40e835cfef1fe2.json  query-7d3df3515c4795fec8a2433ee789f304fe830776c39eb6eb449595919bfc22b4.json  query-8c0b52b4add533dc39cf589ff17c580db06ea1af333cad56c850e18034aeb57f.json  query-9116a165fee9efbe57749863d2bc581f8bbdc0ca2445368aa40d9dab18f9c9c8.json  query-943236e74179ec7a57a9e8405f07182940c45bc232aef132ff5a22608cd528f4.json  query-9582d85fed6ff7e525f137dbb54d9a473d00cfaafcc11ae6b062ed8f4bc50e66.json  query-994cc02a27e98c2bcbbf0f0602f3a5fe53851611670c1e9c61a58ae6188578c2.json  query-9aa7692014ae6a812a183114cc33bbf8aff4a137484a25cb1627af185a3a3906.json  query-a0fd0d92d444ec36fe976192a54846b91797aaef6005417edd5bdc1cb48c6423.json  query-a2931ba6f84be8bf97e5fc339aa783ff9d80ebae06cfa5c311faeda0fbbee73c.json  query-a579c60053c3f0038222e5d16350fb4f47abf36b050e04e2be654b36ba41e56f.json  query-ae02770137756019b993cb2e8aa7683bd297cea07b70f3965db9f4e4baa8f411.json  query-af317827f659b2254e13b1a9c83a80b608e4de431b55ef62f310a90ff6229738.json  query-b79f872f9a71fe4aa22dea48fff684714d02a08ffe737b97e654e0f4eeb62c12.json  query-b86968ba84e2231cd343efaef1c7475704c9c066af2e6eacc29c6a1854866ca7.json  query-bdc6308101e8394c092218e2e96d7ea5e49dab53b035d2caa47ecff1add3ee96.json  query-bdf33b0fb78331b63afa7a45ac3202e6f1858304ae34286583b9c386d2906e24.json  query-c6477ad72b16577da0ae7654fb6ec030a0e664fd4e565b0edcc8861209e67a80.json  query-cd414878bba9f1475c2465d18ce6e6271adced23ff0eb4557d06ecad056deefc.json  (+14 more)
dev/: blink-ln-gateway-cli.sh  docker-compose.e2e.yml  docker-compose.yml  generate-supergraph.sh  seed_test_wallets.rs  symphony-dev.yml
migrations/: 20260507100000_invoices.down.sql  20260507100000_invoices.sql  20260507100000_invoices.up.sql  20260507100100_outbox_events.down.sql  20260507100100_outbox_events.sql  20260507100100_outbox_events.up.sql  20260507100200_idempotency_stubs.down.sql  20260507100200_idempotency_stubs.up.sql  20260514000000_payments.sql  README.md
proto/: lightning_payment_gateway.proto  spend_authorization.proto
src/: api.rs  app.rs  cli.rs  config.rs  dev_constants.rs  fees.rs  health.rs  htlc.rs  idempotency.rs  invoice.rs  job.rs  lib.rs  lnd.rs  main.rs  outbox.rs  payment.rs  primitives.rs  profile.rs  scope.rs  server.rs  symphony.rs  (+2 more)
(+97 files in other folders)
