[package]
name = "blink-lightning-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.14"
tonic-prost = "0.14"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
tokio = { version = "1.44", features = ["full"] }
tokio-postgres = "0.7"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
axum = { version = "0.8", features = ["macros"] }
es-entity = "0.10"
derive_builder = "0.20"
opentelemetry = "0.31.0"
tracing = "0.1"
async-trait = "0.1"
futures = "0.3"
bytes = "1"
prost = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
job = "0.6"
sha2 = "0.10"
rand = "0.8"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
hex = "0.4"
async-graphql = { version = "7.0", features = ["dataloader"] }
async-graphql-axum = "7.0"
jsonwebtoken = "9.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4", features = ["derive", "env"] }
serde_yaml = "0.9"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tonic-health = "0.14"
anyhow = "1"
tonic_lnd = { version = "0.4", package = "fedimint-tonic-lnd", features = ["lightningrpc", "routerrpc", "invoicesrpc"] }
lightning-invoice = "0.33"

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }
mockall = "0.13"
# Used by the integration suite to construct test BOLT11 invoices with
# known amounts + payment-hashes via `lightning_invoice::InvoiceBuilder`.
bitcoin = { version = "0.32", features = ["secp-recovery"], default-features = false }
